--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -11,7 +11,11 @@ html {
 
 /* Section */
 section {
-  padding: 100px 0;
+  padding: 6.5rem 0px;
+}
+svg {
+  margin-bottom: -8rem;
+  position: relative;
 }
 .max-width {
   max-width: 1300px;
@@ -163,6 +167,56 @@ footer {
 }
 
 /* About */
+.about {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  background-color: crimson;
+  color: white;
+}
+.about h2 {
+  font-size: 2.5rem;
+  font-weight: normal;
+  font-family: "Poppins", sans-serif;
+}
+
+/* Study */
+.study {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  background-color: white;
+  color: black;
+}
+.study h2 {
+  font-size: 2.5rem;
+  font-weight: normal;
+  font-family: "Poppins", sans-serif;
+}
+
+/* Skills */
+.skills {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  background-color: crimson;
+  color: white;
+}
+.skills h2 {
+  font-size: 2.5rem;
+  font-weight: normal;
+  font-family: "Poppins", sans-serif;
+}
+
+/* Contact */
+.contact {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  background-color: white;
+  color: black;
+}
+.contact h2 {
+  font-size: 2.5rem;
+  font-weight: normal;
+  font-family: "Poppins", sans-serif;
+}
 
 /* Footer */
 footer {
